# bazel-reproduction-playground

./: BUILD.bazel  MODULE.bazel
src/: Sealed.java  Test.java
